fixed navigation bar

--- a/index.html
+++ b/index.html
@@ -28,15 +28,13 @@
 
 <div class="home-background">
 
-  <!-- <div class="left-home-image">
-    <img src="img/portfolioplaceholder.png" alt="Sketches of jean short and jean jacket with pink tube top">
-    </div> -->
 
 <div class="home-image">
   <img src="img/backgroundimage.jpg" alt="photo of Nat standing in skate park with yellow jacket">
 
 <div class="name">
   <h1>NATALIE LINGREN</h1>
+  <p>natalielingren@gmail.com</p>
 </div>
 
 <nav class="nav-menu-flex">
