--- a/lyn.html
+++ b/lyn.html
@@ -51,8 +51,8 @@
 
 <div class="project-one-description-flex-item">
     <div class="project-content">
-      <h1>Project Goal</h1>
-      <p>The goal of this tube top, is to design a versatile piece of clothing for Vancouverites that will fit well, look flattering, be sustainable and be a fair price. There are not many brands that fufill this requirement online.</p>
+      <h1>Project Goal/Challenge</h1>
+      <p>The goal of this tube top, is to design a versatile piece of clothing for Vancouverites that will fit well, look flattering, be sustainable and be a fair price. The challenge we face is not having precendents to follow when trying to achieve this product design, and trying to balance the goal of fashion and sustainability. </p>
 
       <h1>My Role</h1>
       <p>My role in this project is to ensure the implementation of sustainable fabrics, and to oversee the iterations made from the user testing.</p>
