--- a/projects.html
+++ b/projects.html
@@ -58,7 +58,7 @@
     <img src="img/project-image-one.jpg" alt="photo of Nat standing in skate park with yellow jacket">
     <div class="project-summary-two">
       <h1>Patio Jams</h1>
-      <p>A musical outdoor space activation within the larger event of Bridewarming, an outdoor event held under the Cambie Bridge that explored untapped potential and possibilities in Vancouver’s covered spaces. This project provided a warm, inviting space where strangers could connect through playing and enjoying music.</p>
+      <p>An experience designed for Public space, Patio Jams is a musical outdoor space activation within the larger event of Bridewarming, an outdoor event held under the Cambie Bridge that explored untapped potential and possibilities in Vancouver’s covered spaces. This project provided a warm, inviting space where strangers could connect through playing and enjoying music.</p>
       </div>
     </div>
     </a>
