--- a/lyn.html
+++ b/lyn.html
@@ -11,6 +11,7 @@
   <link href="css/stylesheet.css" rel="stylesheet">
   <link href="css/flex.css" rel="stylesheet">
   <link href="css/lyn.css" rel="stylesheet">
+  <link href="css/projects.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Catamaran|Nunito+Sans|Overpass|Source+Sans+Pro|Vollkorn" rel="stylesheet">
@@ -41,6 +42,9 @@
 
 </header>
 
+<div class="see-next">
+  <h3><a href="patiojams.html" class="in-text-link">See Patio Jams ></h3></a>
+</div>
 
 <div class="projects-photo-flex-container">
 
@@ -49,7 +53,10 @@
 
   </div>
 
+
+
 <div class="project-one-description-flex-item">
+
     <div class="project-content">
       <h1>Project Goal/Challenge</h1>
       <p>The goal of this tube top, is to design a versatile piece of clothing for Vancouverites that will fit well, look flattering, be sustainable and be a fair price. The challenge we face is not having precendents to follow when trying to achieve this product design, and trying to balance the goal of fashion and sustainability. </p>
