--- a/patiojams.html
+++ b/patiojams.html
@@ -11,6 +11,7 @@
   <link href="css/stylesheet.css" rel="stylesheet">
   <link href="css/flex.css" rel="stylesheet">
   <link href="css/patiojams.css" rel="stylesheet">
+  <link href="css/projects.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Catamaran|Nunito+Sans|Overpass|Source+Sans+Pro|Vollkorn" rel="stylesheet">
@@ -41,6 +42,9 @@
 
 </header>
 
+<div class="see-next">
+  <h3><a href="lyn.html" class="in-text-link">See LYN Collective ></h3></a>
+</div>
 
 <div class="projects-photo-flex-container">
 
@@ -50,8 +54,8 @@
 
 <div class="project-one-description-flex-item">
     <div class="project-content">
-      <h1>Project Goal</h1>
-      <p>Our vision was to create a warm, inviting space where strangers could connect through playing and enjoying music. We wanted to offer  people a safe space to perform and play because we believe such spaces are lacking in Vancouver. We wanted to create a feeling of inclusion, inspiration, and joy through music at Patio Jams.</p>
+      <h1>Project Goal/Challenge</h1>
+      <p>The Challenge of this project was to find a way to encourage public space activation in the winter. Our vision was to create a warm, inviting space where strangers could connect through playing and enjoying music. We wanted to offer  people a safe space to perform and play because we believe such spaces are lacking in Vancouver. We wanted to create a feeling of inclusion, inspiration, and joy through music at Patio Jams.</p>
 
       <h1>My Role</h1>
       <p>I was in charge of the user experience for the activation: Insuring that the space felt inclusive and welcoming for people of all musical skill levels, and that the layout and branding felt comfortable and safe. </p>
