--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,7 @@
 
   <link href="css/stylesheet.css" rel="stylesheet">
   <link href="css/flex.css" rel="stylesheet">
+  <link href="css/projects.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Catamaran|Nunito+Sans|Overpass|Source+Sans+Pro|Vollkorn" rel="stylesheet">
