added a footer to each page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 
 <div class="name">
   <h1>NATALIE LINGREN</h1>
-  <p>natalielingren@gmail.com</p>
+  <h2>Product and User Experience Designer</h2>
+  <a href="mailto:natalielingren@gmail.com">natalielingren@gmail.com</a>
+
 </div>
 
 <nav class="nav-menu-flex">
@@ -52,14 +54,25 @@
     <a href="stylesheet.html">Stylesheet</a>
   </div>
   </nav>
+
+
+  <!-- <footer>
+    <p>designed by nat</p>
+    </footer> -->
+
 </div>
+
 
 <!-- <div class="right-home-image">
     <img src="img/portfolioplaceholder.png" alt="Sketches of jean short and jean jacket with pink tube top">
   </div> -->
+
 </div>
 
-    </div>
+
+<footer>
+  <p>designed by nat</p>
+  </footer>
 
 
             </body>
