fixed home page menu flex

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
 <div class="home-image">
-  <img src="img/backgroundimage.jpg" alt="photo of Nat standing in skate park with yellow jacket">
+  <img src="img/backgroundimage2.jpg" alt="photo of Nat standing in skate park with yellow jacket">
 
 <div class="name">
   <h1>NATALIE LINGREN</h1>
