--- a/lyn.html
+++ b/lyn.html
@@ -43,7 +43,7 @@
 </header>
 
 <div class="see-next">
-  <h3><a href="patiojams.html" class="in-text-link">See Patio Jams ></h3></a>
+  <a href="patiojams.html" class="in-text-link"><h3>See Patio Jams ></h3></a>
 </div>
 
 <div class="projects-photo-flex-container">
@@ -77,14 +77,6 @@
 
 
 
-
-
-<!-- <div class="right-home-image">
-    <img src="img/portfolioplaceholder.png" alt="Sketches of jean short and jean jacket with pink tube top">
-  </div> -->
-
-
-    </div>
 
     <footer>
       <p>designed by nat</p>
