--- a/patiojams.html
+++ b/patiojams.html
@@ -43,7 +43,7 @@
 </header>
 
 <div class="see-next">
-  <h3><a href="lyn.html" class="in-text-link">See LYN Collective ></h3></a>
+  <a href="lyn.html" class="in-text-link"><h3>See LYN Collective ></h3></a>
 </div>
 
 <div class="projects-photo-flex-container">
@@ -74,19 +74,7 @@
 
 </div>
 
-<!-- <div class="project-page-name">
-  <h1>NATALIE LINGREN</h1>
-</div> -->
 
-
-
-
-<!-- <div class="right-home-image">
-    <img src="img/portfolioplaceholder.png" alt="Sketches of jean short and jean jacket with pink tube top">
-  </div> -->
-
-
-    </div>
 
     <footer>
       <p>designed by nat</p>
