improving photo layout on about me and projects

--- a/about-me.html
+++ b/about-me.html
@@ -12,8 +12,9 @@
   <link href="css/flex.css" rel="stylesheet">
   <link href="css/about-me.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Catamaran|Nunito+Sans|Overpass|Source+Sans+Pro|Vollkorn" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
 
@@ -41,13 +42,22 @@
 
 </header>
 
-<div class="about-me">
+<div class="about-me-flex-container">
+  <div class="about-me-description">
+    <h1>Who am I?</h1>
+    <p>Hey! My name is Nat and I go to SFU for UX design, but I am also the co-founder of LYN Collective, a sustainable clothing line which designs street wear chic. I have two focuses: Product design and User Experience Design. I focus on sustainability in my projects, which you can find in my all rented, zero waste Patio Jams project, and my selection of sustainable fabrics for my LYN Collective projects as well as my committment to breaking fast fashion! I always try to implement as much user testing as possible, and try to find a good balance between implementing enjoyable design with my own artistic visions.  </p>
+    <a href="projects.html" class="in-text-link-two">Check out my projects here.</a>
+    </div>
+    <div class="about-me-image">
   <img src="img/pictureofNat.jpg" alt="photo of Nat in a chair fondly looking at 2 pairs of shoes">
-    <div class="about-me-description">
-      <h1>Who am I?</h1>
-      <p>Hey! My name is Nat and I go to SFU for UX design, but I am also the co-founder of LYN Collective, a sustainable clothing line which designs street wear chic. I have two focuses: Product design and User Experience Design. I focus on sustainability in my projects, which you can find in my all rented, zero waste Patio Jams project, and my selection of sustainable fabrics for my LYN Collective projects as well as my committment to breaking fast fashion! I always try to implement as much user testing as possible, and try to find a good balance between implementing enjoyable design with my own artistic visions.  </p>
-      <a href="projects.html" class="in-text-link-two">Check out my projects here.</a>
-      </div>
+</div>
+  <div class="about-me-image">
+    <img src="img/pictureofNat.jpg" alt="photo of Nat in a chair fondly looking at 2 pairs of shoes">
+  </div>
+    <div class="about-me-image">
+      <img src="img/pictureofNat.jpg" alt="photo of Nat in a chair fondly looking at 2 pairs of shoes">
+    </div>
+
   </div>
 
 
