--- a/lyn.html
+++ b/lyn.html
@@ -49,7 +49,29 @@
 <div class="projects-photo-flex-container">
 
 <div class="project-one-description-flex-item">
-  <img src="img/LYNphoto.jpg" alt="photo of Nat standing in skate park with yellow jacket">
+
+  <img class="project-image" src="img/LYNphoto.jpg" alt="photo of Nat standing in skate park with yellow jacket">
+
+
+  <div class="project-process-flex-container">
+
+    <div class="process-flex-item">
+  <img class="process" src="img/square.jpg" alt="photo of Nat standing in skate park with yellow jacket">
+    </div>
+
+    <div class="process-flex-item">
+  <img class="process" src="img/square.jpg" alt="photo of Nat standing in skate park with yellow jacket">
+    </div>
+
+    <div class="process-flex-item">
+  <img class="process" src="img/square.jpg" alt="photo of Nat standing in skate park with yellow jacket">
+</div>
+
+    <div class="process-flex-item">
+  <img class="process" src="img/square.jpg" alt="photo of Nat standing in skate park with yellow jacket">
+      </div>
+
+  </div>
 
   </div>
 
