added a new flexbox for process photos for projects

--- a/lyn.html
+++ b/lyn.html
@@ -53,6 +53,30 @@
   <img class="project-image" src="img/LYNphoto.jpg" alt="photo of Nat standing in skate park with yellow jacket">
 
 
+  <!-- <div class="project-process-flex-container">
+
+    <div class="process-flex-item">
+  <img class="process" src="img/square.jpg" alt="photo of Nat standing in skate park with yellow jacket">
+    </div>
+
+    <div class="process-flex-item">
+  <img class="process" src="img/square.jpg" alt="photo of Nat standing in skate park with yellow jacket">
+    </div>
+
+    <div class="process-flex-item">
+  <img class="process" src="img/square.jpg" alt="photo of Nat standing in skate park with yellow jacket">
+</div>
+
+    <div class="process-flex-item">
+  <img class="process" src="img/square.jpg" alt="photo of Nat standing in skate park with yellow jacket">
+      </div>
+
+  </div> -->
+
+  </div>
+
+
+
   <div class="project-process-flex-container">
 
     <div class="process-flex-item">
@@ -72,9 +96,6 @@
       </div>
 
   </div>
-
-  </div>
-
 
 
 <div class="project-one-description-flex-item">
