--- a/patiojams.html
+++ b/patiojams.html
@@ -49,7 +49,27 @@
 <div class="projects-photo-flex-container">
 
 <div class="project-one-description-flex-item">
-  <img src="img/project-image-one.jpg" alt="photo of Nat standing in skate park with yellow jacket">
+  <img class="project-image" src="img/project-image-one.jpg" alt="photo of Nat standing in skate park with yellow jacket">
+  </div>
+
+  <div class="project-process-flex-container">
+
+    <div class="process-flex-item">
+  <img class="process-two" src="img/square.jpg" alt="photo of Nat standing in skate park with yellow jacket">
+    </div>
+
+    <div class="process-flex-item">
+  <img class="process-two" src="img/square.jpg" alt="photo of Nat standing in skate park with yellow jacket">
+    </div>
+
+    <div class="process-flex-item">
+  <img class="process-two" src="img/square.jpg" alt="photo of Nat standing in skate park with yellow jacket">
+</div>
+
+    <div class="process-flex-item">
+  <img class="process-two" src="img/square.jpg" alt="photo of Nat standing in skate park with yellow jacket">
+      </div>
+
   </div>
 
 <div class="project-one-description-flex-item">
