added new process photos

--- a/lyn.html
+++ b/lyn.html
@@ -35,9 +35,6 @@
     <div class="project-nav-menu-item">
       <a href="projects.html">Projects</a>
     </div>
-    <!-- <div class="project-nav-menu-item">
-      <a href="contact.html">natalielingren@gmail.com</a>
-    </div> -->
     </nav>
 
 </header>
@@ -50,28 +47,7 @@
 
 <div class="project-one-description-flex-item">
 
-  <img class="project-image" src="img/LYNphoto.jpg" alt="photo of Nat standing in skate park with yellow jacket">
-
-
-  <!-- <div class="project-process-flex-container">
-
-    <div class="process-flex-item">
-  <img class="process" src="img/square.jpg" alt="photo of Nat standing in skate park with yellow jacket">
-    </div>
-
-    <div class="process-flex-item">
-  <img class="process" src="img/square.jpg" alt="photo of Nat standing in skate park with yellow jacket">
-    </div>
-
-    <div class="process-flex-item">
-  <img class="process" src="img/square.jpg" alt="photo of Nat standing in skate park with yellow jacket">
-</div>
-
-    <div class="process-flex-item">
-  <img class="process" src="img/square.jpg" alt="photo of Nat standing in skate park with yellow jacket">
-      </div>
-
-  </div> -->
+  <img class="project-image" src="img/LYNphoto.jpg" alt="photo of two girls with ripped jeans with LYN written on top">
 
   </div>
 
@@ -80,19 +56,19 @@
   <div class="project-process-flex-container">
 
     <div class="process-flex-item">
-  <img class="process" src="img/square.jpg" alt="photo of Nat standing in skate park with yellow jacket">
+  <img class="process" src="img/tubetop.jpg" alt="photo of black tube top lying on wood">
     </div>
 
     <div class="process-flex-item">
-  <img class="process" src="img/square.jpg" alt="photo of Nat standing in skate park with yellow jacket">
+  <img class="process" src="img/tubefront.jpg" alt="photo woman wearing black tube top facing forward">
     </div>
 
     <div class="process-flex-item">
-  <img class="process" src="img/square.jpg" alt="photo of Nat standing in skate park with yellow jacket">
+  <img class="process" src="img/tubeback.jpg" alt="photo woman wearing black tube top facing backward">
 </div>
 
     <div class="process-flex-item">
-  <img class="process" src="img/square.jpg" alt="photo of Nat standing in skate park with yellow jacket">
+  <img class="process" src="img/straps.jpg" alt="photo woman wearing black tube top facing backward with straps">
       </div>
 
   </div>
