--- a/patiojams.html
+++ b/patiojams.html
@@ -35,9 +35,7 @@
     <div class="project-nav-menu-item">
       <a href="projects.html">Projects</a>
     </div>
-    <!-- <div class="project-nav-menu-item">
-      <a href="contact.html">natalielingren@gmail.com</a>
-    </div> -->
+
     </nav>
 
 </header>
@@ -49,25 +47,25 @@
 <div class="projects-photo-flex-container">
 
 <div class="project-one-description-flex-item">
-  <img class="project-image" src="img/project-image-one.jpg" alt="photo of Nat standing in skate park with yellow jacket">
+  <img class="project-image" src="img/project-image-one.jpg" alt="photo people playing instruments on a patio with lights">
   </div>
 
   <div class="project-process-flex-container">
 
     <div class="process-flex-item">
-  <img class="process-two" src="img/square.jpg" alt="photo of Nat standing in skate park with yellow jacket">
+  <img class="process-two" src="img/iteration-1.jpg" alt="photo of a sketch of Patio Jams">
     </div>
 
     <div class="process-flex-item">
-  <img class="process-two" src="img/square.jpg" alt="photo of Nat standing in skate park with yellow jacket">
+  <img class="process-two" src="img/iteration-2.jpg" alt="photo of a photoshopped patio with instruments on it">
     </div>
 
     <div class="process-flex-item">
-  <img class="process-two" src="img/square.jpg" alt="photo of Nat standing in skate park with yellow jacket">
+  <img class="process-two" src="img/project-image-two.jpg" alt="photo of a big group watching a performace at Patio Jams">
 </div>
 
     <div class="process-flex-item">
-  <img class="process-two" src="img/square.jpg" alt="photo of Nat standing in skate park with yellow jacket">
+  <img class="process-two" src="img/handoutpatiojamsport.jpg" alt="handout with instructions on how to host your own jam.">
       </div>
 
   </div>
