--- a/projects.html
+++ b/projects.html
@@ -43,6 +43,16 @@
 
 <div class="projects-photo-flex-container">
 
+  <a href="patiojams.html"><div class="project-two-image-flex-item">
+      <img src="img/project-image-one.jpg" alt="photo of Nat standing in skate park with yellow jacket">
+      <div class="project-summary-two">
+        <h1>Patio Jams</h1>
+        <p>An experience designed for Public space, Patio Jams is a musical outdoor space activation within the larger event of Bridewarming, an outdoor event held under the Cambie Bridge that explored untapped potential and possibilities in Vancouver’s covered spaces. This project provided a warm, inviting space where strangers could connect through playing and enjoying music.</p>
+        </div>
+      </div>
+      </a>
+
+
 <a href="lyn.html"><div class="project-one-image-flex-item">
   <img src="img/LYNphoto.jpg" alt="photo of Nat standing in skate park with yellow jacket">
   <div class="project-summary">
@@ -53,14 +63,14 @@
   </div>
   </a>
 
-<a href="patiojams.html"><div class="project-two-image-flex-item">
+<!-- <a href="patiojams.html"><div class="project-two-image-flex-item">
     <img src="img/project-image-one.jpg" alt="photo of Nat standing in skate park with yellow jacket">
     <div class="project-summary-two">
       <h1>Patio Jams</h1>
       <p>An experience designed for Public space, Patio Jams is a musical outdoor space activation within the larger event of Bridewarming, an outdoor event held under the Cambie Bridge that explored untapped potential and possibilities in Vancouver’s covered spaces. This project provided a warm, inviting space where strangers could connect through playing and enjoying music.</p>
       </div>
     </div>
-    </a>
+    </a> -->
 
 </div>
 
