--- a/stylesheet.html
+++ b/stylesheet.html
@@ -14,7 +14,7 @@
   <link href="css/projects.css" rel="stylesheet">
   <link href="css/patiojams.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Catamaran|Nunito+Sans|Overpass|Source+Sans+Pro|Vollkorn" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Catamaran%7CNunito+Sans%7COverpass%7CSource+Sans+Pro%7CVollkorn" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
 
@@ -51,7 +51,7 @@
 </section>
 
 <a href="lyn.html"><div class="project-one-image-flex-item">
-  <img src="img/LYNphoto.jpg" alt="photo of Nat standing in skate park with yellow jacket">
+  <img class="project-image" src="img/LYNphoto.jpg" alt="photo of two people with LYN on top">
   <div class="project-summary">
     <h1>LYN Collective Tube Top</h1>
     <p>This tube top is a product design for LYN Collective, iterated and conceptualized to be supportive, comfortable, sustainable and flattering for an inclusive range of sizes</p>
@@ -63,25 +63,51 @@
   <div class="projects-photo-flex-container">
 
   <div class="project-one-description-flex-item">
-    <img src="img/LYNphoto.jpg" alt="photo of Nat standing in skate park with yellow jacket">
+
+    <img class="project-image" src="img/LYNphoto.jpg" alt="photo of two girls with ripped jeans with LYN written on top">
 
     </div>
 
+
+
+    <div class="project-process-flex-container">
+
+      <div class="process-flex-item">
+    <img class="process" src="img/tubetop.jpg" alt="photo of black tube top lying on wood">
+      </div>
+
+      <div class="process-flex-item">
+    <img class="process" src="img/tubefront.jpg" alt="photo woman wearing black tube top facing forward">
+      </div>
+
+      <div class="process-flex-item">
+    <img class="process" src="img/tubeback.jpg" alt="photo woman wearing black tube top facing backward">
+  </div>
+
+      <div class="process-flex-item">
+    <img class="process" src="img/straps.jpg" alt="photo woman wearing black tube top facing backward with straps">
+        </div>
+
+    </div>
+
+
   <div class="project-one-description-flex-item">
+
       <div class="project-content">
-        <h1>Project Goal</h1>
-        <p>This is a summary of a project.This is a summary of a project.This is a summary of a project.This is a summary of a project.This is a summary of a project.This is a summary of a project</p>
+        <h1>Project Goal/Challenge</h1>
+        <p>The goal of this tube top, is to design a versatile piece of clothing for Vancouverites that will fit well, look flattering, be sustainable and be a fair price. The challenge we face is not having precendents to follow when trying to achieve this product design, and trying to balance the goal of fashion and sustainability. </p>
 
         <h1>My Role</h1>
-        <p>This is a summary of a project.This is a summary of a project.This is a summary of a project.This is a summary of a project.This is a summary of a project.This is a summary of a project</p>
+        <p>My role in this project is to ensure the implementation of sustainable fabrics, and to oversee the iterations made from the user testing.</p>
 
         <h1>Execution</h1>
-        <p>This is a summary of a project.This is a summary of a project.This is a summary of a project.This is a summary of a project.This is a summary of a project.This is a summary of a project</p>
+        <p>This project is launching the Summer 2018, but so far we have managed to secure a sustainable fabric made of lyocell and organic cotton. The first prototype is currently being made, and we have incoporated detachable straps because we found a large amount of our user base does not believe that a tube top alone would be supportive enough, and would stop them from buying it.</p>
 
+        <h1>Outcomes</h1>
+        <p>The wanted outcome of this project is really to create a clothing brand that breaks fast fashion, cheap, and as inlcusive as possible. With those brand elements, we want to push it forward in a way that incorporates a juxtaposition of tender vs tough and streetwear vs delicate.  </p>
         </div>
 
       </div>
-
 
   </div>
 
@@ -229,7 +255,9 @@
         </section>
         <!-- body conent -->
       </div>
-
+      <footer>
+        <p>designed by nat / <a href="https://github.com/natalielingren/newPortfolio"> Github Repository </a></p>
+        </footer>
 
     </body>
     </html>
