--- a/about-me.html
+++ b/about-me.html
@@ -12,7 +12,7 @@
   <link href="css/flex.css" rel="stylesheet">
   <link href="css/about-me.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Catamaran|Nunito+Sans|Overpass|Source+Sans+Pro|Vollkorn" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Catamaran%7CNunito+Sans%7COverpass%7CSource+Sans+Pro%7CVollkorn" rel="stylesheet">
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -60,7 +60,7 @@
 
 
     <footer>
-      <p>designed by nat</p>
+      <p>designed by nat / <a href="https://github.com/natalielingren/newPortfolio"> Github Repository </a></p>
       </footer>
             </body>
             </html>
