--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="css/flex.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Merriweather" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fjalla+One%7CMerriweather" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
 
@@ -71,9 +71,8 @@
 
 
 <footer>
-  <p>designed by nat</p>
+  <p>designed by nat / <a href="https://github.com/natalielingren/newPortfolio"> Github Repository </a></p>
   </footer>
-
 
             </body>
             </html>
