--- a/about-me.html
+++ b/about-me.html
@@ -7,13 +7,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>P03 - Nat's Portfolio</title>
 
-
-  <link href="css/stylesheet.css" rel="stylesheet">
-  <link href="css/flex.css" rel="stylesheet">
-  <link href="css/about-me.css" rel="stylesheet">
+  <link href="css/super.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Catamaran%7CNunito+Sans%7COverpass%7CSource+Sans+Pro%7CVollkorn" rel="stylesheet">
-
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
@@ -59,8 +55,8 @@
 
 
 
-    <footer>
-      <p>designed by nat / <a href="https://github.com/natalielingren/newPortfolio"> Github Repository </a></p>
-      </footer>
+  <footer>
+    <p>designed by nat / <a href="https://github.com/natalielingren/newPortfolio"> Github Repository </a> / <a href="stylesheet.html">Stylesheet</a></p>
+    </footer>
             </body>
             </html>
