--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <title>P03 - Nat's Portfolio</title>
 
 
-  <link href="css/stylesheet.css" rel="stylesheet">
-  <link href="css/flex.css" rel="stylesheet">
+  <link href="css/super.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Fjalla+One%7CMerriweather" rel="stylesheet">
@@ -46,32 +45,18 @@
   <div class="nav-menu-item">
     <a href="projects.html">Projects</a>
   </div>
-  <!-- <div class="nav-menu-item">
-    <a href="contact.html">natalielingren@gmail.com</a>
-  </div> -->
 
-  <div class="nav-menu-item">
-    <a href="stylesheet.html">Stylesheet</a>
-  </div>
   </nav>
 
 
-  <!-- <footer>
-    <p>designed by nat</p>
-    </footer> -->
 
 </div>
-
-
-<!-- <div class="right-home-image">
-    <img src="img/portfolioplaceholder.png" alt="Sketches of jean short and jean jacket with pink tube top">
-  </div> -->
 
 </div>
 
 
 <footer>
-  <p>designed by nat / <a href="https://github.com/natalielingren/newPortfolio"> Github Repository </a></p>
+  <p>designed by nat / <a href="https://github.com/natalielingren/newPortfolio"> Github Repository </a> / <a href="stylesheet.html">Stylesheet</a></p>
   </footer>
 
             </body>
