--- a/patiojams.html
+++ b/patiojams.html
@@ -7,11 +7,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>P03 - Nat's Portfolio</title>
 
-
-  <link href="css/stylesheet.css" rel="stylesheet">
-  <link href="css/flex.css" rel="stylesheet">
-  <link href="css/patiojams.css" rel="stylesheet">
-  <link href="css/projects.css" rel="stylesheet">
+  <link href="css/super.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Catamaran%7CNunito+Sans%7COverpass%7CSource+Sans+Pro%7CVollkorn" rel="stylesheet">
@@ -50,7 +46,7 @@
   <img class="project-image" src="img/project-image-one.jpg" alt="photo people playing instruments on a patio with lights">
   </div>
 
-  <div class="project-process-flex-container">
+  <div class="project-process-flex-container-two">
 
     <div class="process-flex-item">
   <img class="process-two" src="img/iteration-1.jpg" alt="photo of a sketch of Patio Jams">
@@ -95,7 +91,7 @@
 
 
 <footer>
-  <p>designed by nat / <a href="https://github.com/natalielingren/newPortfolio"> Github Repository </a></p>
+  <p>designed by nat / <a href="https://github.com/natalielingren/newPortfolio"> Github Repository </a> / <a href="stylesheet.html">Stylesheet</a></p>
   </footer>
             </body>
             </html>
