--- a/stylesheet.html
+++ b/stylesheet.html
@@ -8,11 +8,7 @@
   <title>P03 - Nat's Portfolio Style Guide</title>
 
 
-  <link href="css/stylesheet.css" rel="stylesheet">
-  <link href="css/flex.css" rel="stylesheet">
-  <link href="css/lyn.css" rel="stylesheet">
-  <link href="css/projects.css" rel="stylesheet">
-  <link href="css/patiojams.css" rel="stylesheet">
+  <link href="css/super.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Catamaran%7CNunito+Sans%7COverpass%7CSource+Sans+Pro%7CVollkorn" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -256,7 +252,7 @@
         <!-- body conent -->
       </div>
       <footer>
-        <p>designed by nat / <a href="https://github.com/natalielingren/newPortfolio"> Github Repository </a></p>
+        <p>designed by nat / <a href="https://github.com/natalielingren/newPortfolio"> Github Repository </a> / <a href="stylesheet.html">Stylesheet</a></p>
         </footer>
 
     </body>
